# course-material

./: .gitignore  Day5_Session1_Slides  Day5_Session2_Slides  README.md  pyproject.toml
day2/: README.md  package.json  pnpm-lock.yaml  slides.md
day2/pages/: clean-code.md  git-github-clean-code.md  git.md  testing.md
day4/: README.md  echo_fastapi.py  gpt2_inference.py  requirements.txt
day4/examples/rest_vs_graphql/: response_body_graphql.json
day4/examples/serialization/: serialization_transformers.py
day4/sessionI/: README.md
day4/sessionII/: README.md
day4/sessionIII/: README.md
ml-experiments/2-session-implementation/: 2-documentation.md  3-project-management.md  4-configuration.md
ml-experiments/project/: pyproject.toml
ml-experiments/project/src/image_classification/: conv_net.py  main.py  training.py
python_project_skeleton/: README.md  pyproject.toml
sessions/1-1-Welcome/: README.md
sessions/1-2-Agile-Project-Management/: README.md
sessions/1-3-Developer-Tools/number_guesser/: pyproject.toml
sessions/1-3-Developer-Tools/number_guesser/src/number_guesser/: main.py
sessions/1-3-Developer-Tools/number_guesser_enhanced/: pyproject.toml
sessions/1-3-Developer-Tools/number_guesser_enhanced/src/number_guesser_enhanced/: __init__.py  game.py  main.py  stats.py  utils.py
sessions/1-3-Developer-Tools/slides/: .npmrc  package.json  pnpm-lock.yaml  slides.md
sessions/2-1-Git-in-Production/slides/: README.md  slides.md
sessions/2-2-Clean-Code/slides/: README.md  slides.md
sessions/2-3-Automated-Testing/slides/: README.md  package.json  pnpm-lock.yaml  slides.md
sessions/3-1-Experiment-Design/: README.md
sessions/3-2-Experiment-Execution/presentation/: 1-overview.md  2-uv.sh  4-configuration.md
sessions/3-2-Experiment-Execution/sample-project/: pyproject.toml
sessions/3-2-Experiment-Execution/sample-project-final/: .gitignore  pyproject.toml
sessions/3-2-Experiment-Execution/sample-project-final/src/image_classification_final/: main.py
sessions/3-2-Experiment-Execution/sample-project/image_classification/: conv_net.py  main.py  training.py
sessions/3-2-Experiment-Execution/sample-project/src/image_classification/: training.py
sessions/3-2-Experiment-Execution/sample-project/src/image_classification/configs/: default.yaml
sessions/3-3-Experiment-Execution/presentation/: 3-project-management.md  5-tracking.md
sessions/3-3-Experiment-Execution/sample-project/: README.md
sessions/3-3-Experiment-Execution/sample-project/src/image_classification/: main.py
sessions/4-1-Model-Deployment-1/: README.md
sessions/4-1-Model-Deployment-1/examples/fastapi_practice/: chat_request.json  chat_response.json
sessions/4-1-Model-Deployment-1/examples/rest_vs_graphql/: request_body_graphql.json  response_body_rest.json
sessions/4-1-Model-Deployment-1/examples/serialization/: serialization_pickle.py  serialization_pytorch_statedict.py  serialization_pytorch_torchscript.py  serialization_tensorflow_keras.py  serialization_tensorflow_onnx.py  serialization_tensorflow_saveweights.py
sessions/4-1-Model-Deployment-1/projects/inference-api/: Dockerfile  pyproject.toml
sessions/4-1-Model-Deployment-1/projects/minimal-fastapi/: pyproject.toml
sessions/4-1-Model-Deployment-1/projects/model-serialization/: dummy_model.py  pyproject.toml
sessions/4-1-Model-Deployment-1/solutions/: practice_minimal_inference_api.py  practice_serialization.py
sessions/4-2-Model-Deployment-2/: README.md
sessions/4-2-Model-Deployment-2/examples/fastapi_improvements/: fastapi_documentation.py  fastapi_error_handling.py  fastapi_input_validation.py  fastapi_testing.py  openapi_example.yml  python_logging.py
sessions/4-2-Model-Deployment-2/solutions/: practice_advanced_inference_api.py  practice_test_inference_api.py
sessions/4-3-Model-Monitoring/: README.md
sessions/4-3-Model-Monitoring/examples/fastapi_monitoring/: fastapi_prometheus.py
sessions/4-3-Model-Monitoring/monitoring-stack/: docker-compose.yml
sessions/4-3-Model-Monitoring/monitoring-stack/alloy/: config.alloy
sessions/4-3-Model-Monitoring/monitoring-stack/grafana/provisioning/datasources/: datasource.yml
sessions/4-3-Model-Monitoring/solutions/: practice_fastapi_metrics.py
sessions/5-1-Startup-Life/: README.md
sessions/5-2-Project-Description/: README.md
