[project]
name = "number-guesser-enhanced"
version = "0.1.0"
description = "An enhanced version of the number guessing game"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
main = "number_guesser_enhanced.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
