[project]
name = "inference-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "tensorflow>=2.18.0",
    "tf-keras>=2.18.0",
    "transformers>=4.49.0",
]

[dependency-groups]
dev = [
    "httpie>=3.2.4",
    "pytest>=8.3.4",
]
