[project]
name = "model-serialization"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "onnx==1.16.1",
    "tensorflow>=2.18.0 ; sys_platform == 'linux'",
    "tensorflow>=2.18.0 ; sys_platform == 'darwin'",
    "tensorflow-cpu>=2.18.0 ; sys_platform == 'win32'",
    "tensorflow-io-gcs-filesystem==0.31.0 ; sys_platform == 'win32'",
    "tf2onnx>=1.16.1",
]
